Tweaked style so that rules with no color flags align with rules that do have colored flags. Consolidated style code for rule state flags. Prevented rule state words from breaking onto two lines.

--- a/app/assets/stylesheets/bugs.css
+++ b/app/assets/stylesheets/bugs.css
@@ -19,34 +19,32 @@ button.back_btn {
     display: inline-block;
 }
 
-/*.rule_state_red{*/
-table#bug-rules-table tr.incomplete-unparsed td.rule_state_col::before {
+#bug-rules-table .rule_state_col {
+    min-width: 115px;
+    text-wrap: none;
+}
+
+/* Rule state default */
+#bug-rules-table .rule_state_col::before {
     width: 10px;
     height: 10px;
     border-radius: 5px;
     content: '';
     display: inline-block;
     margin-right: 6px;
+}
+
+/*.rule_state_red{*/
+#bug-rules-table .incomplete-unparsed .rule_state_col::before {
     background-color: #ff5500;
 }
-table#bug-rules-table tr.deleted-rule td.rule_state_col::before {
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
-    content: '';
-    display: inline-block;
-    margin-right: 6px;
-    background-color: #fff;
+#bug-rules-table .deleted-rule .rule_state_col::before {
+    background-color: transparent;
 }
-table#bug-rules-table tr.parsed.stale-edit td.rule_state_col::before {
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
-    content: '';
-    display: inline-block;
-    margin-right: 6px;
+#bug-rules-table .parsed.stale-edit .rule_state_col::before {
     background-color: #bbbbbb;
 }
+
 div.progress{
     background-color: #80a9ba;
     width:100%;
